--- a/style.css
+++ b/style.css
@@ -5,71 +5,166 @@ body {
     padding: 20px 40px;
 }
 
+.continue-game {
+    text-align: center;
+    max-width: 600px;
+    margin: 0 auto;
+    margin-top: 10%;
+}
+
+.yes-or-no {
+    display: flex;
+    justify-content: space-around;
+}
+
+#yes, #no {
+    font-size: 25px;
+    cursor: pointer;
+    margin-top: 25px;
+    padding: 10px 20px;
+}
+
+#yes:hover, #no:hover {
+    background-color: #F1006E;
+}
+
 .container {
-    width: 900px;
+    width: 740px;
     margin: 0 auto;
     display: none;
 }
 
 img {
-    max-width: 500px;
+    max-width: 450px;
     width: 100%;
     margin: 0 auto;
     display: block;
 }
 
-#current-player {
-    font-size: 24px;
-    text-align: center;
-    margin-top: 30px;
-}
-
 .score {
     display: flex;
     justify-content: space-around;
-    margin-top: 20px;
     font-size: 30px;
     color: #fff;
+    margin-top: 5px;
 }
 
-.player-score {
+.player-1, .player-2 {
     text-align: center;
+    padding: 10px 40px;
+    font-family: 'VT323', sans-serif;
+    font-size: 40px;
+    color: #78B992;
+}
+
+.animate-color {
+    animation-name: color_change;
+    animation-duration: 2s;
+    animation-iteration-count: 1;
+}
+
+@-webkit-keyframes color_change {
+	from { color: #78B992 }
+	to { color: red; }
+}
+
+@keyframes color_change {
+	from { color: #78B992; }
+	to { color: red; }
+}
+
+#current-player {
+    font-size: 34px;
+    text-align: center;
+    margin-top: 15px;
     background-color: #007480;
-    padding: 15px 40px;
-    font-size: 24px;
+    padding: 20px 0 3px 0;
+    font-weight: bold;
 }
 
 span {
-    display: block;
-    font-family: 'Orbitron', sans-serif;
-    font-size: 36px;
-}
+    font-size: 66px;
+}   
 
 #question {
-    font-size: 30px;
+    font-size: 20px;
     text-align: center;
-    margin-top: 30px;
-    margin-bottom: 30px;
+    background-color: #fff;
+    color: #000;
+    padding-bottom: 20px;
+    font-weight: bold;
 }
 
 #a, #b, #c, #d {
-    border: 1px solid #299e2d;
-    padding: 20px 35px;
-    margin-bottom: 40px;
+    padding: 15px 70px;
     border-radius: 300px;
-    font-size: 20px;
+    font-size: 18px;
     cursor: pointer;
+    width: 60%;
+    margin: 0 auto;
+    margin-bottom: 25px;
+    color: #000;
+    background-size: 30px 30px;
+    background-repeat: no-repeat;
+    background-position: 25px 10px;
+}
+
+#a {
+    background-image: url('imgs/triangle.png');
+}
+
+#b {
+    background-image: url('imgs/circle.png');
+}
+
+#c {
+    background-image: url('imgs/star.png');
+}
+
+#d {
+    background-image: url('imgs/umbrella.png');
 }
 
 ul {
     padding: 0;
+    background: #fff;
+    margin: 0;
+    border: 20px solid #007480;
+    padding-top: 20px;
 }
 
 li {
     list-style: none;
+    border: 1px solid #000;
 }
 
 li:hover {
-    background: rgb(17, 17, 17);
-    box-shadow: 0 0 10px 4px #5bb35e6b;
+    font-weight: bold;
+}
+
+.winner {
+    color: #fff;
+    text-align: center;
+    font-size: 30px;
+    margin-top: 100px;
+    display: none;
+}
+
+#winning-player {
+    font-size: 40px;
+}
+#play-again {
+    width: 170px;
+    background: #fff;
+    color: #000;
+    font-size: 20px;
+    padding: 10px 0;
+    margin: 30px auto;
+    cursor: pointer;
+}
+#mute {
+    position: absolute;
+    top: 25px;
+    left: 25px;
+    cursor: pointer;
 }
