--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
 }
 
 .container {
-    width: 740px;
+    max-width: 740px;
     margin: 0 auto;
     display: none;
 }
@@ -100,7 +100,7 @@ span {
     border-radius: 300px;
     font-size: 18px;
     cursor: pointer;
-    width: 60%;
+    max-width: 60%;
     margin: 0 auto;
     margin-bottom: 25px;
     color: #000;
@@ -168,3 +168,9 @@ li:hover {
     left: 25px;
     cursor: pointer;
 }
+
+@media only screen and (max-width: 600px) {
+    ul {
+      padding: 20px;
+    }
+  }
